force-app/main/default/objects/PEP__c/PEP__c.object-meta.xml
<CustomObject>
    <label>PEP</label>
    <nameField>
        <displayFormat>PEP-{0000}</displayFormat>
        <label>PEP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PEPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>