force-app/main/default/objects/PEP__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Director__c)), Director__r.Registration__r.Account__r.Name, (IF(NOT(ISBLANK(Beneficial_Owner__c)), Beneficial_Owner__r.Registration__r.Account__r.Name, Registration__r.Account__r.Name)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>