force-app/main/default/objects/PEP__c/fields/Account_Registered_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Registered_Country__c</fullName>
    <formula>IF(NOT(ISBLANK(Director__c)), TEXT(Director__r.Registration__r.RegBusiness_Country__c), (IF(NOT(ISBLANK(Beneficial_Owner__c)), TEXT(Beneficial_Owner__r.Registration__r.RegBusiness_Country__c), TEXT(Registration__r.RegBusiness_Country__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Registered Country</label>
    <type>Text</type>
</CustomField>