force-app/main/default/objects/PEP__c/fields/Date_of_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Date__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>