force-app/main/default/objects/PEP__c/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>Director__c</referenceTo>
    <relationshipLabel>PEPs</relationshipLabel>
    <relationshipName>PEPs</relationshipName>
    <type>Lookup</type>
</CustomField>