force-app/main/default/objects/PEP__c/fields/ECN__c.field-meta.xml
<CustomField>
    <fullName>ECN__c</fullName>
    <formula>IF(NOT(ISBLANK(Director__c)), Director__r.Registration__r.Account__r.ECN__c, (IF(NOT(ISBLANK(Beneficial_Owner__c)), Beneficial_Owner__r.Registration__r.Account__r.ECN__c, Registration__r.Account__r.ECN__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECN</label>
    <type>Text</type>
</CustomField>