force-app/main/default/objects/PEP__c/fields/In_office__c.field-meta.xml
<CustomField>
    <fullName>In_office__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the PEP is still in office</inlineHelpText>
    <label>In office</label>
    <type>Checkbox</type>
</CustomField>