force-app/main/default/objects/PEP__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Director__c)), Director__r.Full_Name__c, (IF(NOT(ISBLANK(Beneficial_Owner__c)), Beneficial_Owner__r.Beneficial_Owner_Name__c, Registration__r.CEO_CFO_First_Name__c + &quot; &quot; + Registration__r.CEO_CFO_Last_Name__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>