force-app/main/default/objects/PEP__c/fields/PEP_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>PEP_Date_of_Birth__c</fullName>
    <formula>IF(NOT(ISBLANK(Date_of_Birth_Date__c)),Date_of_Birth_Date__c, Date_of_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PEP Date of Birth</label>
    <type>Date</type>
</CustomField>