force-app/main/default/objects/PEP__c/fields/PEP_Type__c.field-meta.xml
<CustomField>
    <fullName>PEP_Type__c</fullName>
    <label>Association with Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beneficial Owner Direct PEP</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner Indirect PEP</fullName>
            </value>
            <value>
                <fullName>Director Direct PEP</fullName>
            </value>
            <value>
                <fullName>Director Indirect PEP</fullName>
            </value>
            <value>
                <fullName>Registration Direct PEP</fullName>
            </value>
            <value>
                <fullName>Registration Indirect PEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>