force-app/main/default/objects/PEP__c/fields/Position_held__c.field-meta.xml
<CustomField>
    <fullName>Position_held__c</fullName>
    <inlineHelpText>What is the position of the PEP ie president, PM, etc</inlineHelpText>
    <label>Position held</label>
    <length>255</length>
    <type>Text</type>
</CustomField>