force-app/main/default/objects/PEP__c/recordTypes/Beneficial_Owner_Direct_PEP.recordType-meta.xml
<RecordType>
    <fullName>Beneficial_Owner_Direct_PEP</fullName>
    <active>true</active>
    <label>Beneficial Owner Direct PEP</label>
</RecordType>