force-app/main/default/objects/PEP__c/recordTypes/Beneficial_Owner_Indirect_PEP.recordType-meta.xml
<RecordType>
    <fullName>Beneficial_Owner_Indirect_PEP</fullName>
    <active>true</active>
    <label>Beneficial Owner Indirect PEP</label>
</RecordType>