force-app/main/default/objects/PEP__c/recordTypes/Director_Direct_PEP.recordType-meta.xml
<RecordType>
    <fullName>Director_Direct_PEP</fullName>
    <active>true</active>
    <label>Director Direct PEP</label>
</RecordType>