force-app/main/default/objects/PEP__c/recordTypes/Director_Indirect_PEP.recordType-meta.xml
<RecordType>
    <fullName>Director_Indirect_PEP</fullName>
    <active>true</active>
    <label>Director Indirect PEP</label>
</RecordType>