force-app/main/default/objects/PEP__c/recordTypes/Registration_Direct_PEP.recordType-meta.xml
<RecordType>
    <fullName>Registration_Direct_PEP</fullName>
    <active>true</active>
    <label>Registration Direct PEP</label>
</RecordType>