force-app/main/default/objects/PEP__c/recordTypes/Registration_Indirect_PEP.recordType-meta.xml
<RecordType>
    <fullName>Registration_Indirect_PEP</fullName>
    <active>true</active>
    <label>Registration Indirect PEP</label>
</RecordType>