force-app/main/default/objects/PEP__c/validationRules/Date_left_office_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_left_office_required</fullName>
    <active>true</active>
    <description>Date left office is required is the In Office checkbox is false.</description>
    <errorConditionFormula>AND(In_office__c = false, ISBLANK(Date_left_office__c))</errorConditionFormula>
    <errorMessage>Enter the Date left office if  PEP is no longer In Office</errorMessage>
</ValidationRule>